feat: ship built-in two-step verification
